[backport] Make test suite work on JDK 11/16
Cherry picks of parts of:

  36a43c0314f939c60307a0a5dbe0350746531e3f
  8599598443fcc9c1692725aa75877072454f664c
  bf4c304a71672d375e5f7d238e679b1826cc7489
  64ec65670ab9245d2bb460955cb5ec64078ebfab
  b5367804b0ac742df4d3f364dbc48ef3ce469ac4
  0db7e9b650765392b57941d1981477f98075f091
  00513cdc3ab19add9f2afb780a0e5eac1b4a4080
  4dcc5c002700dceb2fb229a67c6c5dd6c887d55b
  d99234abfda8c29f57357194db0686f70eae3553